working in progress

--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
  <div class  = "container">
 <div class="card">
 <img src="images/illustration-hero.svg" alt="" style="width: 100%;">
-  Order Summary
+<h1> Order Summary </h1>  <br>
+<p>You can now listen to millions of songs, audiobooks, and podcasts on any 
+  device anywhere you like!</p>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
+ <div class = Plan> Annual Plan
   $59.99/year
 
   Change
-
-  Proceed to Payment
-  Cancel Order
+</div>
+<div class = Payment>  Proceed to Payment</div>
+<div class = Cancel>  Cancel Order </div>
 </div>  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
