--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-  <link rel="stylesheet" type="text/css" href="style.css">
-  
-  <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" type="text/css" href="style.css"
 </head>
+
+<title> Frontend Mentor | Order summary card</title>
+  
+
 <body>
- <div class  = "container">
-<div class="card">
-<img src="images/illustration-hero.svg" alt="" style="width: 100%;">
-<h1> Order Summary </h1>  <br>
-<p>You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!</p>
+<div class="container">
+<div class = "card">
+  <img src="images/illustration-hero.svg" alt="Avatar" style="width:100%">
+  <div class = order>Order Summary </div>
 
- <div class = Plan> Annual Plan
+  <div = class="listen"> can now listen to millions of songs, audiobooks, and podcasts on any 
+  device anywhere you like!
+</div>
+
+<div class="plan">
+  Annual Plan
   $59.99/year
-
+</div>
+<div class="change">
   Change
 </div>
-<div class = Payment>  Proceed to Payment</div>
-<div class = Cancel>  Cancel Order </div>
-</div>  
-  <div class="attribution">
+<div class="payment">  Proceed to Payment </div>
+<div class="cancel">  Cancel Order </div>
+</div>
+</div>
+  <div class="footer">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
-</div> 
 </body>
 </html>
