--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css"
+
 </head>
 
 <title> Frontend Mentor | Order summary card</title>
@@ -15,9 +18,9 @@
 <div class="container">
 <div class = "card">
   <img src="images/illustration-hero.svg" alt="Avatar" style="width:100%">
-  <div class = order>Order Summary </div>
+  <div class = "order">Order Summary </div>
 
-  <div = class="listen"> can now listen to millions of songs, audiobooks, and podcasts on any 
+  <div = class="listen"> You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
 </div>
 
