work in progress

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" type="text/css" href="style.css"
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
@@ -24,12 +24,15 @@
   device anywhere you like!
 </div>
 
+<div class="wrap">
 <div class="plan">
+  <img class = "music" src="images/icon-music.svg" alt="Avatar" style="width:10%">  
   Annual Plan
   $59.99/year
-</div>
-<div class="change">
   Change
+</div>  
+</div>
+ 
 </div>
 <div class="payment">  Proceed to Payment </div>
 <div class="cancel">  Cancel Order </div>
