--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <div class="container">
 <div class = "card">
   <img src="images/illustration-hero.svg" alt="Avatar" style="width:100%">
+  <div class = 'pad-wrap'>
   <div class = "order">Order Summary </div>
 
   <div = class="listen"> You can now listen to millions of songs, audiobooks, and podcasts on any 
@@ -25,17 +26,23 @@
 </div>
 
 <div class="wrap">
-<div class="plan">
-  <img class = "music" src="images/icon-music.svg" alt="Avatar" style="width:10%">  
-  Annual Plan
-  $59.99/year
-  Change
-</div>  
-</div>
+  <div class = 'icon-wrap'>
+    <img class = "music" src="images/icon-music.svg" alt="Avatar" style="width:40%">  
+  </div>    
+  
+      <div class="plan"> 
+        Annual Plan <br> 
+        $59.99/year
+    </div>
+    <div class = 'change'>Change</div>  
+  </div>
  
-</div>
+  <div class="buffer"></div>
+
 <div class="payment">  Proceed to Payment </div>
 <div class="cancel">  Cancel Order </div>
+</div>
+</div>
 </div>
 </div>
   <div class="footer">
