--- a/index.html
+++ b/index.html
@@ -17,30 +17,35 @@
 <body>
 <div class="container">
 <div class = "card">
-  <img src="images/illustration-hero.svg" alt="Avatar" style="width:100%">
+  <img class = "img" src="images/illustration-hero.svg" alt="Avatar" style="width:100%">
   <div class = 'pad-wrap'>
   <div class = "order">Order Summary </div>
 
   <div = class="listen"> You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
-</div>
+  </div>
 
 <div class="wrap">
   <div class = 'icon-wrap'>
     <img class = "music" src="images/icon-music.svg" alt="Avatar" style="width:40%">  
   </div>    
   
-      <div class="plan"> 
-        Annual Plan <br> 
-        $59.99/year
+    <div class="plan"> 
+      Annual Plan <br> 
+      $59.99/year
     </div>
+   
     <div class = 'change'>Change</div>  
-  </div>
+</div>
  
-  <div class="buffer"></div>
+<div class="buffer"></div>
 
 <div class="payment">  Proceed to Payment </div>
+
+<div class="buffer"></div>
+
 <div class="cancel">  Cancel Order </div>
+<div class="buffer"></div>
 </div>
 </div>
 </div>
