--- a/index.html
+++ b/index.html
@@ -3,49 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  
+  <title>Frontend Mentor | Order summary card</title>
 
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
-
-<title> Frontend Mentor | Order summary card</title>
-  
-
 <body>
-<div class="container">
-<div class = "card">
-  <img src="images/illustration-hero.svg" alt="Avatar" style="width:100%">
-  <div class = 'pad-wrap'>
-  <div class = "order">Order Summary </div>
 
-  <div = class="listen"> You can now listen to millions of songs, audiobooks, and podcasts on any 
+  Order Summary
+
+  You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
-</div>
 
-<div class="wrap">
-  <div class = 'icon-wrap'>
-    <img class = "music" src="images/icon-music.svg" alt="Avatar" style="width:40%">  
-  </div>    
+  Annual Plan
+  $59.99/year
+
+  Change
+
+  Proceed to Payment
+  Cancel Order
   
-      <div class="plan"> 
-        Annual Plan <br> 
-        $59.99/year
-    </div>
-    <div class = 'change'>Change</div>  
-  </div>
- 
-  <div class="buffer"></div>
-
-<div class="payment">  Proceed to Payment </div>
-<div class="cancel">  Cancel Order </div>
-</div>
-</div>
-</div>
-</div>
-  <div class="footer">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
