--- a/index.html
+++ b/index.html
@@ -5,33 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel='stylesheet' type = 'text/css' href='style.css'>
+
+  
   
   <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
+ </head>
 <body>
 
-  Order Summary
+<div class = container>
+  <img src= "images/illustration-hero.svg" alt="Avatar" class="avatar">
 
+<div class="order text-center">  Order Summary </div>
+
+<div class = "listen text-center">
   You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
+</div>
 
-  Annual Plan
-  $59.99/year
+<div class = plan-button>
+  <div class="music">
+  <img src= "images/icon-music.svg" alt="Music" class='music-icon' >
+    </div> 
+  <div class = 'plan'> 
+  <div class = 'plan-strong'> Annual Plan </div>
+  <div class = 'rate'>$59.99/year</div>
+</div>
+<div class= 'change'>  Change</div>
+</div>
 
-  Change
-
+<div class = 'payment text-center'>
   Proceed to Payment
+</div>
+<div class = cancel>
   Cancel Order
+</div>    
+</div>  
   
-  <div class="attribution">
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Hemanathan H P</a>.
+  <footer>
 </body>
 </html>
