--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
   <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Hemanathan H P</a>.
-  <footer>
+  </footer>
 </body>
 </html>
